Add Texture2D class
- Add STB library to load images from memory
- Add options to initialize the OpenGL texture by setting
  * Min/Max filter
  * MipMap filter
  * Wrapping

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ add_subdirectory(lib/glutils)
 add_subdirectory(vendor/glm)
 add_subdirectory(vendor/glad)
 add_subdirectory(vendor/error-code)
+add_subdirectory(vendor/stb)
 
 # Override GLFW build options
 option(GLFW_BUILD_EXAMPLES OFF)
