Add sample ImGui window which can be used to change the background color.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,22 +30,31 @@ FetchContent_Declare(
 	GIT_TAG "3.3.8"
 )
 
-# Unfortunately STB does is not a CMake Project. So we would have to populate it manually
+
+# Unfortunately STB and imgui do are not CMake Projects. So we would have to populate it manually
 # with FetchContent_Populate instead of using FetchContent_MakeAvailable. This will allow
-# to copy a custom CMakeLists.txt into the source dir of stb before running add_subdirectory.
-# 1. Declare the STB repo paths
+# to copy a custom CMakeLists.txt into the source dirs before running add_subdirectory.
+# 1. Declare the repo paths
+# 2. Populate it. This will trigger the download and will also make available <project>_SOURCE_DIR
+#    variable in CMake
+# 3. Copy the custom CMakeLists.txt into the project source directory
+# 4. Add project subdir. This will trigger the build
+
+FetchContent_Declare(
+	imgui
+	GIT_REPOSITORY "https://github.com/ocornut/imgui.git"
+	GIT_TAG "e9f50fb87c1037e06a9b0e93484fd794a32cb835"
+)
+FetchContent_Populate(imgui)
+file(COPY_FILE ${CMAKE_SOURCE_DIR}/cmake/imgui/CMakeLists.txt ${imgui_SOURCE_DIR}/CMakeLists.txt)
+
 FetchContent_Declare(
 	stb
 	GIT_REPOSITORY https://github.com/nothings/stb.git
 	GIT_TAG af1a5bc352164740c1cc1354942b1c6b72eacb8a
 )
-# 2. Populate it. This will trigger the download and will also make available stb_SOURCE_DIR
-# variable in CMake
 FetchContent_Populate(stb)
-# 3. Copy the custom CMakeLists.txt into the STB source directory
 file(COPY_FILE ${CMAKE_SOURCE_DIR}/cmake/stb/CMakeLists.txt ${stb_SOURCE_DIR}/CMakeLists.txt)
-# 4. Add stb subdir. This will trigger the build
-add_subdirectory(${stb_SOURCE_DIR})
 
 # As per CMake official docs advice FetchContent_MakeAvailable should be called after
 # all calls to FetchContent_Declare. Do not include stb here as it was manually populated.
@@ -57,6 +66,8 @@ FetchContent_MakeAvailable(
 
 add_subdirectory(vendor/glad)
 add_subdirectory(lib/glutils)
+add_subdirectory(${stb_SOURCE_DIR})
+add_subdirectory(${imgui_SOURCE_DIR})
 
 set(CPP
 	cpp/main.cpp
@@ -113,7 +124,7 @@ register_shader("assets/shaders/morph.glsl" "Morph")
 register_shader("assets/shaders/gradient_2d.glsl" "Gradient2D")
 
 add_executable(${PROJECT_NAME} ${CPP} ${HEADERS} ${GLOBAL_SHADER_PATHS})
-target_link_libraries(${PROJECT_NAME} PRIVATE glutils glfw error_code)
+target_link_libraries(${PROJECT_NAME} PRIVATE glutils glfw error_code imgui)
 target_include_directories(${PROJECT_NAME} PRIVATE include)
 
 # Handle resources
